[project]
name = "pyenvhookcs"
version = "0.1.0"
description = "to check my env"
authors = [
    {name = "pytestHooksLearn", email = "https://github.com/sensureDk/pytestHooksLearn.git"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
